@@ -20,6 +20,9 @@ import java.awt.datatransfer.StringSelection;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.Arrays;
+import java.util.stream.Collectors;
+
 import database.Datasource;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -28,7 +31,9 @@ import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.control.*;
+import javafx.scene.control.MenuButton;
+import javafx.scene.control.MenuItem;
+import javafx.scene.control.TableView;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
@@ -37,12 +42,12 @@ import model.Medicine;
 import model.MedicineSupply;
 import utils.Pair;
 
-import java.io.IOException;
-import java.util.*;
-import java.util.List;
 
 public class PharmacistController {
     String username;
+
+    @FXML
+    private BorderPane pharmacistPanel;
 
     public String getUsername() {
         return username;
@@ -51,9 +56,6 @@ public class PharmacistController {
     public void setUsername(String username) {
         this.username = username;
     }
-
-    @FXML
-    private BorderPane pharmacistPanel;
 
     @FXML
     private MenuItem logoutMenuItem;
@@ -79,63 +81,12 @@ public class PharmacistController {
         //fill the table
         int staffId = Datasource.getInstance().queryStaffId(username);
         Datasource.getInstance().updateMedicineSupply(MedicineSupply.getInstance());
-        medicine = FXCollections.observableList((List<Pair<Medicine, Integer>>) (Object) Arrays.asList(MedicineSupply.getInstance().toList().toArray()));
+        medicine = FXCollections.observableList(Arrays.asList(MedicineSupply.getInstance().toList().toArray()).stream().map(obj -> (Pair<Medicine, Integer>) obj).collect(Collectors.toList()));
         medicineTableView.setItems(medicine);
     }
 
     public void showProfileDialog() {
-
-        Dialog<ButtonType> dialog2 = new Dialog<ButtonType>();
-        dialog2.initOwner(pharmacistPanel.getScene().getWindow());
-        dialog2.setTitle("Profile");
-        FXMLLoader fxmlLoader2 = new FXMLLoader();
-        fxmlLoader2.setLocation(getClass().getResource("../scene/profile/ProfileDialog.fxml"));
-        try {
-            dialog2.getDialogPane().setContent(fxmlLoader2.load());
-            ProfileController profileController = fxmlLoader2.getController();
-            profileController.updateFields(username);
-        } catch (IOException e) {
-            System.out.println("Couldn't load the dialog");
-            e.printStackTrace();
-            return;
-        }
-
-        ButtonType editButton = new ButtonType("Edit");
-        ButtonType closeButton = new ButtonType("Close");
-        dialog2.getDialogPane().getButtonTypes().addAll(editButton, closeButton);
-
-        dialog2.getDialogPane().getScene().getWindow().setOnCloseRequest(e -> {
-            dialog2.close();
-        });
-
-        Optional<ButtonType> result = dialog2.showAndWait();
-        if (result.isPresent() && result.get() == editButton) {
-            Dialog<ButtonType> dialog = new Dialog<ButtonType>();
-            dialog.initOwner(pharmacistPanel.getScene().getWindow());
-            dialog.setTitle("Edit Profile");
-            FXMLLoader fxmlLoader = new FXMLLoader();
-            fxmlLoader.setLocation(getClass().getResource("../scene/profile/EditProfile.fxml"));
-
-            try {
-                dialog.getDialogPane().setContent(fxmlLoader.load());
-                ProfileController profileController = fxmlLoader.getController();
-                profileController.updateEdit(username);
-            } catch (IOException e) {
-                System.out.println("Couldn't load the dialog");
-                e.printStackTrace();
-                return;
-            }
-
-            dialog.getDialogPane().getButtonTypes().add(ButtonType.OK);
-            dialog.getDialogPane().getButtonTypes().add(ButtonType.CANCEL);
-
-            Optional<ButtonType> result2 = dialog.showAndWait();
-            if (result2.isPresent() && result2.get() == ButtonType.OK) {
-                ProfileController profileController = fxmlLoader.getController();
-                profileController.editFields(username);
-            }
-
-        }
+        new ProfileViewBuilder(username, pharmacistPanel);
     }
 
     public void logout(ActionEvent event) throws IOException {
